<resources>
    <string name="app_name">WhenAsk</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="set_language">选择语言</string>
    <string name="register_login">注册/登陆</string>
    <string name="register">注册</string>
    <string name="user">现有用户</string>
    <string name="user_name">用户姓名</string>

    <string name="user_real_name">真实的姓</string>
    <string name="user_real_name2">真实的名</string>
    <string name="password">密码</string>
    <string name="emailaddress">电邮邮箱</string>
    <string name="iphonenumber">电话号码</string>
    <string name="homeaddress">住址</string>
    <string name="is_save_password">储存密码</string>
    <string name="submit">提交</string>
    <string name="reset">重填</string>
    <string name="identification">身份证号码</string>

    <string name="login">登入</string>
    <string name="forget">忘记密码</string>

    <string name="please_selector">请选择</string>
    <string name="i_student">我是学生</string>
    <string name="i_teacher">我是老师</string>

    <string name="selectsubject">选择教授科目</string>
    <string name="China">中文</string>
    <string name="English">英文</string>
    <string name="Math">数学</string>
    <string name="Biology">生物</string>
    <string name="physics">物理</string>
    <string name="chemistry">化学</string>
    <string name="polity">政治</string>
    <string name="history">历史</string>
    <string name="geography">地理</string>
    <string name="post_photograph">拍照上传问题</string>
    <string name="post_record">录音上传问题</string>
    <string name="post_text">文字上传问题</string>

    <string name="primary">小学</string>
    <string name="junior_middle_school">初中</string>
    <string name="hight_school">高中</string>

    <string name="ask_question">我要发问</string>
    <string name="ask_history">发问历史</string>
    <string name="ask_draft">发问草稿</string>

    <string name="introduce">自我介绍</string>
    <string name="setting">设置</string>
    <string name="reset_password">更改密码</string>
    <string name="notification">通知</string>
    <string name="buy">购买点数</string>
    <string name="quit">退出</string>

    <string name="solvequestion">解答问题</string>
    <string name="question_history">答题历史</string>
    <string name="nav_sex">性别</string>
    <string name="nav_broth">出生日期</string>
    <string name="nav_email">电子邮箱</string>
    <string name="nav_resetcolor">更改颜色</string>
    <string name="nav_subscription">订阅</string>
    <string name="nav_version">版本</string>
    <string name="nav_use">使用条款</string>
    <string name="nav_declaration">使用声明</string>
    <string name="nav_idea">意见栏</string>
    <string name="nav_name">姓名</string>
    <string name="nav_school">学校</string>
    <string name="nav_grade">年级</string>
    <string name="nav_hobby">兴趣爱好</string>
    <string name="nav_address">地址</string>
    <string name="resetpassword">更改密码</string>
    <string name="nowpassword">现有密码</string>
    <string name="newpassword">新密码</string>
    <string name="surepassword">确认密码</string>

    <string name="teacherintrodece">自我介绍</string>
    <string name="gender_women">女</string>
    <string name="gender_men">男</string>
    <string name="user_info">个人信息</string>
    <string name="save">保存</string>
    <string name="complete">完成</string>

    <string name="selete_subject">请选择科目</string>
    <string name="selete_grade">请选择年级</string>
    <string name="grade_1">一年级</string>
    <string name="grade_2">二年级</string>
    <string name="grade_3">三年级</string>
    <string name="grade_4">四年级</string>
    <string name="grade_5">五年级</string>
    <string name="grade_6">六年级</string>
    <string name="grade_7">七年级</string>
    <string name="grade_8">八年级</string>
    <string name="grade_9">九年级</string>
    <string name="grade_10">高一</string>
    <string name="grade_11">高二</string>
    <string name="grade_12">高三</string>
    <string name="image_null">图片不能为空</string>
    <string name="post_succeed">发送成功</string>
    <string name="authcode">验证码</string>
    <string name="post_twopicture">至少上传一张证书</string>
    <string name="save_succeed">保存成功</string>

    //error
    <string name="user_exit">用户名或者密码错误!</string>
    <string name="sever_error">服务器错误</string>
    <string name="authcodeError">验证码错误</string>
    <string name="login_succeed">登录成功</string>
    <string name="history_unfinished">未完成</string>
    <string name="history_finished">已完成</string>
    <string name="question_detailed">问题的详细描述</string>
    <string name="subject">课程</string>
    <string name="grade">年级</string>
    <string name="time">时间</string>
    <string name="answer">答案</string>
    <string name="answer_notadopt">不采纳</string>
    <string name="answer_tadopt">采纳</string>
    <string name="no_question">没有相关问题</string>
    <string name="no_voice">没有语音</string>
    <string name="sure_to_solve_question">解决此问题</string>
    <string name="sure">确定吗</string>
    <string name="sure_yes">是</string>
    <string name="sure_no">否</string>
    <string name="question_exit">该问题已被抢答</string>
    <string name="giveup_qustion">放弃此题</string>
    <string name="save_draft">保存至草稿</string>
    <string name="giveup_succeed">放弃成功</string>
    <string name="auto_login_no">自动登录失败</string>
    <string name="no_tadopt_answer">确定不采纳吗？</string>
    <string name="tadopt_answer">确定采纳吗？</string>
    <string name="answer_succeed">回答成功</string>
    <string name="teacher_education">学历</string>
    <string name="teacher_agelimit">年限</string>
    <string name="day">天前</string>
    <string name="hours">小时前</string>
    <string name="minutes">分钟前</string>
    <string name="justnow">刚刚</string>
    <string name="tadopt_succeed">采纳成功</string>
    <string name="notadopt_succeed">不采纳成功</string>
    <string name="auto_login_succeed">登录成功,请选择语言</string>
    <string name="originpassword_error">原密码错误</string>
    <string name="get_authcode">获取验证码</string>
    <string name="getauthcode_succeed">获取成功</string>
    <string name="email_exit">电子邮箱不存在</string>
    <string name="authcode_past">验证码过期</string>
    <string name="change_succeed">更改成功</string>
    <string name="username_format">a-zA-Z0-9的组合,8-20</string>
    <string name="password_format">必须有a-zA-Z0-9的组合,8-20</string>
    <string name="username_registed">账号名已经被注册</string>
    <string name="email_registed">邮箱已经被注册</string>
    <string name="phone_registed">手机号已经被注册</string>
    <string name="id_registed">身份证已经被注册</string>
    <string name="username_format_error">账号名格式错误</string>
    <string name="password_format_error">密码格式错误</string>
    <string name="email_format_error">电子邮箱格式错误</string>
    <string name="phone_format_error">手机号码格式错误</string>
    <string name="id_format_error">身份证号格式错误</string>
    <string name="student_question_detailed">问题详情</string>
    <string name="rank_score">rank</string>
    <string name="student_status">评价状态</string>
    <string name="no_answer_history">无回答历史</string>
    <string name="my_answer_history">我的回答</string>
    <string name="student_status_yes">学生赞同</string>
    <string name="student_status_no">学生不赞同</string>
    <string name="student_status_assess">待学生评估</string>
    <string name="student_question_detailed_look">问题详情查看 ></string>
    <string name="post_email_fail">发送邮箱失败</string>
    <string name="voice_no_record">语音还未录制</string>
    <string name="question_status_1">已发问待教师抢答</string>
    <string name="question_status_2">已被教师抢答待回答</string>
    <string name="question_status_3">教师已回答待回复</string>
    <string name="question_status_4">否决答案重新待抢答</string>
    <string name="register_succeed">注册成功</string>
    <string name="draft_empty">清空</string>
    <string name="voice_limits">没有录音权限</string>
    <string name="save_limits">没有存储权限</string>
    <string name="sure_delete_all">删除所有数据</string>
    <string name="select_subject">选择科目</string>


    //new
    <string name="sure_password_error">确认密码错误</string>

    <string name="record_1">大专</string>
    <string name="record_2">本科</string>
    <string name="record_3">硕士</string>
    <string name="record_4">博士</string>
    <string name="record_5">博士后</string>
    <string name="selete_record">选择学历</string>

    <string name="solve">解答此题</string>
    <string name="no_solve">暂不解答</string>

    <string name="no_empty">用户名或密码不能为空</string>
    <string name="no_empty_auth">验证码不能为空</string>
    <string name="no_through_certification">未通过审核认证</string>

    <string name="post_question">上传问题</string>
</resources>
