<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/i_student"/>

    <Button
        android:layout_weight="1"
        android:id="@+id/student_primary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/primary"/>
    <Button
        android:layout_weight="1"
        android:id="@+id/student_junior_school"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/junior_middle_school"/>
    <Button
        android:layout_weight="1"
        android:id="@+id/student_hight"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hight_school"/>

</LinearLayout>