<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/barlyout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/resetuser_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:popupTheme="@style/AppTheme.PopupOverlay">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/selectsubject"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/select_selectsubject_complete"
                    android:text="@string/complete"
                    android:textSize="20sp"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/backdrop"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5">
                <CheckBox
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/chinese"
                    android:textColor="@android:color/white"
                    android:text="@string/China"
                    />
                <CheckBox
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/math"
                    android:textColor="@android:color/white"
                    android:text="@string/Math"/>

                <CheckBox
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/english"
                    android:textColor="@android:color/white"
                    android:text="@string/English"/>

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5">
                <CheckBox
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/biology"
                    android:textColor="@android:color/white"
                    android:text="@string/Biology"/>

                <CheckBox
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/physics"
                    android:textColor="@android:color/white"
                    android:text="@string/physics"/>

                <CheckBox
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/chemistry"
                    android:textColor="@android:color/white"
                    android:text="@string/chemistry"/>

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5">
                <CheckBox
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/polity"
                    android:textColor="@android:color/white"
                    android:text="@string/polity"/>
                <CheckBox
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/history"
                    android:textColor="@android:color/white"
                    android:text="@string/history"/>
                <CheckBox
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/geography"
                    android:textColor="@android:color/white"
                    android:text="@string/geography"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal">
            <ImageView
                android:clickable="true"
                android:layout_margin="5dp"
                android:id="@+id/postImage_01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitXY" />
            <ImageView
                android:clickable="true"
                android:layout_margin="5dp"
                android:id="@+id/postImage_02"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitXY"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center">
            <Button
                android:background="@mipmap/problem_camera"
                android:id="@+id/select_subject_takephoto"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:textColor="@android:color/white"
                android:text="拍照上传"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
