<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/backdrop">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:text="@string/forget"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_width="@dimen/register_item"
            android:layout_height="match_parent"
            android:text="@string/emailaddress"
            android:textColor="@android:color/white"
            android:id="@+id/textView13"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/edText_login_forget_password"
            android:layout_toRightOf="@+id/textView13"
            android:layout_toLeftOf="@+id/forget_password_space"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/forget_password_space"
            android:text="@string/get_authcode"
            android:textColor="@android:color/transparent"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_width="@dimen/register_item"
            android:layout_height="match_parent"
            android:text="@string/authcode"
            android:textColor="@android:color/white"
            android:id="@+id/textview22"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/forget_password_editext_auto"
            android:layout_toRightOf="@+id/textview22"
            android:layout_toLeftOf="@+id/forget_password_authcode"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/forget_password_authcode"
            android:text="@string/get_authcode"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:textAllCaps="false"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_width="@dimen/register_item"
            android:layout_height="match_parent"
            android:text="@string/newpassword"
            android:textColor="@android:color/white"
            android:id="@+id/textview25"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/forget_password_editext_newpasswork"
            android:layout_toRightOf="@+id/textview25"
            android:layout_toLeftOf="@+id/forget_password_space2"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/forget_password_space2"
            android:text="@string/get_authcode"
            android:textColor="@android:color/transparent"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5">
        <Button
            android:background="@mipmap/an_submit"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:id="@+id/email_submit"
            android:textAllCaps="false"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="12dp"/>
        <Button
            android:background="@mipmap/an_retry"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:textColor="@android:color/white"
            android:text="@string/reset"
            android:id="@+id/rewrite"
            android:textAllCaps="false"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="12dp"
            android:textSize="13sp"/>
    </RelativeLayout>
</LinearLayout>