<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/backdrop"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="11"></RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="11"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="11">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="@dimen/register_item"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/user_name"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/edText_register_username"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textView5"
            android:layout_toRightOf="@+id/textView5"
            android:hint="@string/username_format"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="11">

        <TextView
            android:layout_width="@dimen/register_item"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/user_real_name"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/edText_register_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="11"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="@dimen/register_item"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/user_real_name2"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/edText_register_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="11"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="11">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="@dimen/register_item"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/password"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/edText_register_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/textView6"
            android:layout_toRightOf="@+id/textView6"
            android:hint="@string/password_format"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="11">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="@dimen/register_item"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/emailaddress"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/edText_register_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/textView4"
            android:layout_toRightOf="@+id/textView4"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="11">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="@dimen/register_item"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/authcode"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/edText_register_auth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/forget_password_authcode"
            android:layout_toRightOf="@+id/textView13"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_register_getauth"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:text="@string/get_authcode"
            android:textColor="@android:color/white"
            android:textAllCaps="false"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="11">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="@dimen/register_item"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/iphonenumber"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/edText_register_iphonenumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/textView8"
            android:layout_toRightOf="@+id/textView8"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="11">
        <!--<TextView-->
        <!--android:layout_width="@dimen/register_item"-->
        <!--android:layout_height="match_parent"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:text="@string/homeaddress"-->
        <!--android:id="@+id/textView2"-->
        <!--android:gravity="center"/>-->
        <!--<EditText-->
        <!--android:imeOptions="actionDone"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/edText_register_address"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_toRightOf="@+id/textView2"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:inputType="text"-->
        <!--android:textColor="@android:color/white"/>-->
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="11">
        <!--<TextView-->
        <!--android:layout_width="@dimen/register_item"-->
        <!--android:layout_height="match_parent"-->
        <!--android:id="@+id/identification"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:text="@string/identification"-->
        <!--android:gravity="center"/>-->

        <!--<EditText-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:id="@+id/edText_register_identi"-->
        <!--android:lines="1"-->
        <!--android:imeOptions="actionNext"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_toRightOf="@+id/identification"-->
        <!--android:layout_toEndOf="@+id/identification"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:inputType="number"/>-->
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="11"></RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:layout_marginBottom="12dp">
        <Button
            android:id="@+id/register_submit"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:background="@mipmap/an_submit"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/register_reset"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:background="@mipmap/an_retry"
            android:gravity="center"
            android:text="@string/reset"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:textSize="13sp"/>
    </RelativeLayout>

    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="11">-->
    <!--</RelativeLayout>-->

</LinearLayout>